@@ -5,23 +5,19 @@ import com.Clinica1.myApp.mantenimiento.domain.model.aggregates.Doctor;
 import com.Clinica1.myApp.mantenimiento.domain.model.valueobjects.Especialidad;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
 public class DoctorAssembler {
-    public DoctorDto toDto(Doctor doctor) {
-        if (doctor == null) return null;
 
+    public DoctorDto toDto(Doctor doctor) {
         return new DoctorDto(
                 doctor.getIdDoctor().obtenerid(),
                 doctor.getIdEmpleado().obtenerid(),
-                doctor.getNombreCompleto().completar(),
                 doctor.getCmp(),
                 doctor.getConsultorio(),
                 doctor.getEspecialidades()
                         .stream()
-                        .map(e -> e.nom_espe())
-                        .collect(Collectors.toList())
+                        .map(Especialidad::nom_espe)
+                        .toList()
         );
     }
 }
