@@ -1,15 +1,11 @@
 package com.Clinica1.myApp.mantenimiento.application.handler;
 import com.Clinica1.myApp.SharedKernel.IDEntidad;
-import com.Clinica1.myApp.appointments.application.exception.CitaNoEncontradaException;
 import com.Clinica1.myApp.mantenimiento.application.command.ActualizarDoctorCommand;
-import com.Clinica1.myApp.mantenimiento.application.exception.DomainException;
-import com.Clinica1.myApp.mantenimiento.domain.model.aggregates.Doctor;
 import com.Clinica1.myApp.mantenimiento.domain.model.valueobjects.Especialidad;
 import com.Clinica1.myApp.mantenimiento.domain.repository.DoctorRepository;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.stream.Collectors;
 
@@ -32,7 +28,7 @@ public class ActualizarDoctorCommandHandler {
                 command.getEspecialidades()
                         .stream()
                         .map(Especialidad::of)
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         doctorRepository.update(doctor);
